@@ -24,7 +24,6 @@
         <exclude-output />
         <content url="file://$MODULE_DIR$">
             <sourceFolder url="file://$MODULE_DIR$/src/java" isTestSource="false" />
-            <sourceFolder url="file://$MODULE_DIR$/src/java11" isTestSource="false" />
             <sourceFolder url="file://$MODULE_DIR$/src/gen-java" isTestSource="false" generated="true" />
             <sourceFolder url="file://$MODULE_DIR$/src/resources" type="java-resource" />
             <sourceFolder url="file://$MODULE_DIR$/interface/thrift/gen-java" isTestSource="false" />
