@@ -1,4 +1,5 @@
 3.0.19
+ * Fix AbstractBTreePartition locking in java 11 (CASSANDRA-14607)
  * Add experimental support for Java 11 (CASSANDRA-9608)
  * Throw IOE instead of asserting on unsupporter peer versions (CASSANDRA-15066)
  * Update token metadata when handling MOVING/REMOVING_TOKEN events (CASSANDRA-15120)
